# Change Log
[O.F.Device (Ore Farming Device)](https://github.com/Iunius118/O.F.Device#readme).
[Source](https://github.com/Iunius118/O.F.Device).

## [Unreleased]
### Fixed
- Register mod recipe book category.

## [12.0.0 NeoForge]
### Changed
- Port to 1.21.11.
- Require NeoForge 21.11.0-beta+.

## [11.0.0 NeoForge]
### Changed
- Port to 1.21.9.
- Require NeoForge 21.9.11-beta+.

## [10.0.0 NeoForge]
### Changed
- Port to 1.21.6.
- Require NeoForge 21.6.5-beta+.

## [9.0.0 NeoForge]
### Changed
- Port to 1.21.5.
- Require NeoForge 21.5.62-beta+.

### Fixed
- Mod game tests.

## [8.0.0 NeoForge]
### Changed
- Port to 1.21.4.
- Require NeoForge 21.4.30-beta+.

## [7.0.0 NeoForge]
### Changed
- Port to 1.21.3.
- Require NeoForge 21.3.10-beta+.
- Use sprite textures in OF device GUI.

## [6.1.0 NeoForge]
### Added
- Add OF C Device, a cobblestone generator.

## [6.0.0 NeoForge]
### Changed
- Port to 1.21.
- Require NeoForge 21.0.52-beta+.

## [5.0.0 NeoForge]
### Changed
- Port to 1.20.6.
- Require NeoForge 20.6.62-beta+.

### Fixed
- Fix access to unloaded config values.

## [4.0.1 NeoForge]
### Fixed
- Recipe type for OF devices.

## [4.0.0 NeoForge]
### Changed
- Port to NeoForge.
- Require NeoForge 1.20.4-20.4.24-beta+.

## [4.0.0]
### Changed
- Release.

## [4.0.0-beta.4]
### Added
- Six new looks to OF device blocks. Stick can be used on placed OF device blocks to change their appearance.

### Fixed
- Quick movement of item stack from player inventory to material slot.

## [4.0.0-beta.3]
### Fixed
- Recipe of recycling OF C Feeder I.

## [4.0.0-beta.2]
### Added
- OF C Feeder II item. This item is the improved version of OF C Feeder I and does not increase fuel consumption.

### Changed
- Rename OF Cobblestone Feeder to OF C Feeder I.

### Removed
- Server-side config item: `cobblestoneFeederConsumesDoubleFuel`.

## [4.0.0-beta.1]
### Added
- Server-side config item: `cobblestoneFeederConsumesDoubleFuel`.

### Changed
- Require Forge 1.20.2-48.0.33+.