@@ -16,7 +16,7 @@ side=BOTH
 mod_id=orefarmingdevice
 mod_name=O.F.Device (Ore Farming Device)
 mod_license=MIT license
-mod_version=12.0.1-alpha.1
+mod_version=12.1.0-alpha.1
 mod_group_id=com.github.iunius118.orefarmingdevice
 mod_update_url=
 mod_url=https://github.com/Iunius118/O.F.Device
